# mobilefacenet-pytorch

./: .gitignore  README.md  pyproject.toml  tests.py
src/mobilefacenet_pytorch/: __init__.py  model.py
tests/: test_model_integrity.py
