[project]
name = "mobilefacenet-pytorch"
version = "0.1.0"
description = "uv-compatible fork of PyTorch implementation of MobileFaceNets"
readme = "README.md"
authors = [{ name = "Cylix Lee", email = "cylix.lee@outlook.com" }]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
license = "Apache-2.0"

[project.urls]
Repository = "https://github.com/cylix-reproduction/mobilefacenet-pytorch"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

# Development sources. Comment out before publish.
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchvision = { index = "pytorch-cpu" }

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true
